@@ -134,14 +134,18 @@ function UNIT_MAXHEALTH(unit)
 end
 
 __Static__() __AutoCache__()
+function Wow.UnitHealthSource()
+    return Wow.FromNextUnitEvent(_UnitHealthSubject)
+end
+
+__Static__() __AutoCache__()
 function Wow.UnitHealth()
-    -- Use the Next for a tiny delay after the UnitHealthMax
-    return Wow.FromUnitEvent(_UnitHealthSubject):Map(UnitHealth)
+    return Wow.FromNextUnitEvent(_UnitHealthSubject):Map(UnitHealth)
 end
 
 __Static__() __AutoCache__()
 function Wow.UnitHealthLost()
-    return Wow.FromUnitEvent(_UnitHealthSubject):Map(function(unit)
+    return Wow.FromNextUnitEvent(_UnitHealthSubject):Map(function(unit)
         local max               = UnitHealthMax(unit)
         local health            = UnitHealth(unit)
         return max and health and (max - health) or 0
@@ -151,7 +155,7 @@ end
 __Static__() __AutoCache__()
 function Wow.UnitHealthFrequent()
     -- Based on the CLEU
-    return Wow.FromUnitEvent(_UnitHealthSubject):Map(function(unit)
+    return Wow.FromNextUnitEvent(_UnitHealthSubject):Map(function(unit)
         local guid              = UnitGUID(unit)
         local health            = _UnitHealthMap[guid]
         if health and _UnitGUIDMap[unit] == guid then return health end
@@ -166,7 +170,7 @@ end
 __Static__() __AutoCache__()
 function Wow.UnitHealthLostFrequent()
     -- Based on the CLEU
-    return Wow.FromUnitEvent(_UnitHealthSubject):Map(function(unit)
+    return Wow.FromNextUnitEvent(_UnitHealthSubject):Map(function(unit)
         local max               = UnitHealthMax(unit)
         local guid              = UnitGUID(unit)
         local health            = _UnitHealthMap[guid]
@@ -181,7 +185,7 @@ end
 
 __Static__() __AutoCache__()
 function Wow.UnitHealthPercent()
-    return Wow.FromUnitEvent(_UnitHealthSubject):Map(function(unit)
+    return Wow.FromNextUnitEvent(_UnitHealthSubject):Map(function(unit)
         local health            = UnitHealth(unit)
         local max               = UnitHealthMax(unit)
 
@@ -192,7 +196,7 @@ end
 __Static__() __AutoCache__()
 function Wow.UnitHealthPercentFrequent()
     -- Based on the CLEU
-    return Wow.FromUnitEvent(_UnitHealthSubject):Map(function(unit)
+    return Wow.FromNextUnitEvent(_UnitHealthSubject):Map(function(unit)
         local guid              = UnitGUID(unit)
         local health            = _UnitHealthMap[guid]
 
@@ -210,7 +214,7 @@ end
 __Static__() __AutoCache__()
 function Wow.UnitHealthLostPercentFrequent()
     -- Based on the CLEU
-    return Wow.FromUnitEvent(_UnitHealthSubject):Map(function(unit)
+    return Wow.FromNextUnitEvent(_UnitHealthSubject):Map(function(unit)
         local guid              = UnitGUID(unit)
         local health            = _UnitHealthMap[guid]
 
@@ -276,7 +280,7 @@ function Wow.UnitConditionColor(useClassColor, smoothEndColor)
                 return cache
             end)
         else
-            return Wow.FromUnitEvent(_UnitHealthSubject):Next():Map(function(unit)
+            return Wow.FromNextUnitEvent(_UnitHealthSubject):Map(function(unit)
                 local health    = _UnitHealthMap[unit] or UnitHealth(unit)
                 local maxHealth = UnitHealthMax(unit)
                 local pct       = health / maxHealth
